# django_pokeapi

./: .gitignore  .pylintrc  Makefile  README.md  manage.py  pyproject.toml
django_pokeapi/: asgi.py  enums.py  utils.py  wsgi.py
django_pokeapi/apps/common/: __init__.py  apps.py  celery.py  common_models.py  redis.py
django_pokeapi/apps/common/migrations/: 0001_create_schemas.py
django_pokeapi/apps/common/resources/migrations/: 2025.5.26_1__create_schemes.sql
django_pokeapi/apps/pokeapi/: models.py  operations.py
django_pokeapi/apps/pokeapi/api/: __init__.py  pokeapi.py
django_pokeapi/apps/pokeapi/dto/: api_dto.py
django_pokeapi/apps/pokeapi/ipc/: async_pokeapi_client.py  ipc_operations.py
django_pokeapi/apps/pokeapi/ipc/dto/: abilities.py  pokemon.py  types.py
django_pokeapi/apps/pokeapi/management/commands/: populate_db.py
django_pokeapi/apps/pokeapi/migrations/: 0001_initial.py
django_pokeapi/config/: dev.env
django_pokeapi/settings/: __init__.py  celery.py  common.py  django.py
django_pokeapi/urls/: urls.py  v1.py
django_pokeapi/urls/v1/: api.py
